# lockbox

./: .dockerignore  .gitignore  .gitlab-ci.yml  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  sonar-project.properties
.zed/: debug.json
cli/: Cargo.toml
cli/src/: commands.rs  helpers.rs  main.rs
crates/lockbox-auth/: Cargo.toml
crates/lockbox-crypto/: Cargo.toml
crates/lockbox-crypto/src/: cipher.rs  keys.rs  lib.rs
crates/lockbox-proto/: Cargo.toml
crates/lockbox-proto/src/: lib.rs
crates/lockbox-store/: Cargo.toml
crates/lockbox-store/migrations/: 20250101000000_initial_schema.sql
crates/lockbox-store/src/: db.rs  keys.rs  lib.rs  passwords.rs  secrets.rs
docs/: api.md  threat-model.md
server/: Cargo.toml  keystore.json  secrets.json
server/src/: main.rs
