[workspace]
members = [
    "crates/lockbox-crypto",
    "crates/lockbox-proto",
    "crates/lockbox-auth",
    "crates/lockbox-store",
    "server",
    "cli"
]
resolver = "3"

[workspace.package]
edition = "2024"

[profile.release]
strip = "symbols"
debug = false
debug-assertions = false
overflow-checks = false
panic = "abort"
lto = "thin"
codegen-units = 1
