[package]
name = "lbx"
version = "0.1.0"
edition = "2024"

[dependencies]
lockbox-crypto = { path = "../crates/lockbox-crypto" }
lockbox-proto  = { path = "../crates/lockbox-proto" }
lockbox-auth   = { path = "../crates/lockbox-auth" }
lockbox-store  = { path = "../crates/lockbox-store" }
clap = { version = "4.5.53", features = ["derive"] }
rpassword = "7.4.0"
dirs = "6.0.0"
ed25519-dalek = "2.2.0"
reqwest = { version = "0.12.25", features = ["json"] }
tokio = { version = "1.48.0", features = ["full"] }
serde_json = "1.0.145"
