[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
lockbox-crypto = { path = "../crates/lockbox-crypto" }
lockbox-proto  = { path = "../crates/lockbox-proto" }
lockbox-auth   = { path = "../crates/lockbox-auth" }
lockbox-store  = { path = "../crates/lockbox-store" }
serde_json = "1.0.145"
axum = "0.8.7"
tokio = { version = "1.48.0", features = ["full"] }
once_cell = "1.21.3"
rand = "0.9.2"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
ed25519-dalek = { version = "2.2.0", features = ["serde"] }
