[package]
name = "lockbox-proto"
version = "0.1.0"
publish = false
edition = "2024"

[dependencies]
ed25519-dalek = { version = "2.2.0", features = ["serde"] }
lockbox-crypto = { path = "../lockbox-crypto" }
lockbox-store = { path = "../lockbox-store" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
